<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"
    tools:background="@drawable/background1"
    tools:context=".tables.TablesFragment">

  <TextView
      style="@style/TitleText"
      android:layout_width="wrap_content"
      android:layout_height="100dp"
      android:gravity="center"
      android:layout_gravity="center"
      android:text="@string/tables_underlined" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/rus"
      style="@style/MenuButton"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:text="@string/russia" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/eng"
      style="@style/MenuButton"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:text="@string/england" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/ger"
      style="@style/MenuButton"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:text="@string/germany" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/sp"
      style="@style/MenuButton"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:text="@string/spain" />


</LinearLayout>