<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:padding="5dp"
    android:layout_marginVertical="3dp"
    android:background="@color/black"
    android:orientation="horizontal">

  <TextView
      android:textColor="@color/white"
      android:textStyle="bold"
      android:id="@+id/stats_team_name"
      android:layout_width="120dp"
      android:layout_height="match_parent"
     android:text="@string/team" />

  <ImageView
      android:layout_marginEnd="10dp"
      android:layout_width="30dp"
      android:layout_height="match_parent"
      tools:background="@color/orange" />

  <TextView
      android:textColor="@color/white"
      android:textStyle="bold"
      android:id="@+id/stats_league"
      android:layout_width="90dp"
      android:layout_height="match_parent"
      android:text="@string/tournament" />

  <TextView
      android:textColor="@color/white"
      android:textStyle="bold"
      android:id="@+id/stats_kicks"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_marginEnd="5dp"
      android:text="@string/kicks" />

  <TextView
      android:textColor="@color/white"
      android:textStyle="bold"
      android:id="@+id/stats_takes"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:text="@string/rating" />

</LinearLayout>