<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:background="@drawable/background1"
    tools:context=".settings.SettingsFragment">


  <TextView
      style="@style/TitleText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/settings_underlined"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/notifications_switch"
      style="@style/SwitchStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/notifications"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/theme_switch"
      style="@style/SwitchStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/dark_theme"
      app:layout_constraintTop_toTopOf="parent" />

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginVertical="10dp"
      android:orientation="horizontal">

    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/wallpapers"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_button"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@drawable/menu_button_background"
        android:fontFamily="@font/robotobolditalic"
        android:text="@string/change"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="bold" />
  </FrameLayout>

</LinearLayout>