<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@drawable/background1"
    tools:context=".stats.StatisticsFragment">

  <TextView
      style="@style/TitleText"
      android:layout_width="wrap_content"
      android:layout_height="100dp"
      android:layout_gravity="center"
      android:gravity="center"
      android:text="@string/statistics_underlined" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/defence"
        style="@style/MenuButton"
        android:textSize="25sp"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/def" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/attack"
        style="@style/MenuButton"
        android:textSize="25sp"
        android:backgroundTint="@color/dark_blue"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/attack" />
  </LinearLayout>

  <include layout="@layout/team_stats_title"/>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/players_rv"
      android:layout_width="match_parent"
      tools:listitem="@layout/team_stats_item"
      android:layout_height="match_parent"
      android:background="@color/gray"
    />

</LinearLayout>